# rust-cpp-interop

./: README.md
crates/bindgen_build/: Cargo.toml  README.md  build.rs
crates/bindgen_build/examples/: simple.rs
crates/bindgen_build/src/: lib.rs
crates/cc_build/: Cargo.toml  README.md  build.rs
crates/cc_build/examples/: simple.rs
crates/cc_build/native/: simple.c
crates/cc_build/src/: lib.rs
crates/cmake_build/: Cargo.toml  README.md  build.rs
crates/cmake_build/examples/: simple.rs
crates/cmake_build/native/: CMakeLists.txt  cats.cpp  cats.hpp
crates/cmake_build/src/: lib.rs
crates/cxx_closure/: Cargo.toml  README.md  build.rs
crates/cxx_closure/examples/: basic.rs  simple.rs
crates/cxx_closure/include/: closure.h
crates/cxx_closure/src/: closure.cpp  lib.rs  main.rs
crates/cxx_complex_type/: Cargo.toml  README.md  build.rs
crates/cxx_complex_type/examples/: basic.rs
crates/cxx_complex_type/include/: matrixmult.hpp
crates/cxx_complex_type/src/: lib.rs
crates/scheduler/: CMakeLists.txt  Cargo.toml  README.md  build.rs
crates/scheduler/examples/: basic.rs  simple.rs  twoschedulers.rs
crates/scheduler/include/: scheduler.h  schedulershim.h
crates/scheduler/src/: lib.rs  main.cpp
docs/: blogpost.md  part1_introduction.md  part2_limitations.md  part3_security.md  part4_translation.md
